# ComputersScienceIIIOmarNeira

FinalProyect/DesignerTools/: README.md  apuntes.txt  comp.py  example.py  main.py  pyproject.toml
FinalProyect/DesignerTools/compiler/features/: general_features.py
FinalProyect/DesignerTools/compiler/features/filtro/: filtro.py  filtroColor.py  filtroDefault.py  filtroEspecializado.py
FinalProyect/DesignerTools/compiler/features/mejorar/: mejorar.py  mejorarEspecializada.py
FinalProyect/DesignerTools/compiler/features/transformar/: transformar.py  transformarDefault.py  transformarEspecializado.py
FinalProyect/DesignerTools/compiler/input_analizer/lexical_analizer/: lexical.py
FinalProyect/DesignerTools/compiler/input_analizer/semantic_analizer/: semantic.py
FinalProyect/DesignerTools/compiler/input_analizer/sintactic_analizer/: sintactic.py
FinalProyect/DesignerTools/compiler/paths/: paths.py
FinalProyect/Documents/Report/: sbc-template.aux  sbc-template.bbl-SAVE-ERROR  sbc-template.bcf  sbc-template.fdb_latexmk  sbc-template.fls  sbc-template.tex
FinalProyect/Documents/Report development/: sbc-template.aux  sbc-template.bcf  sbc-template.blg  sbc-template.fdb_latexmk  sbc-template.fls  sbc-template.run.xml  sbc-template.tex
FinalProyect/Documents/Report development/development/: conclusions.tex  grammar.tex  keywords.tex  lexemsAndTokens.tex  results.tex  start.tex  use.tex
FinalProyect/Documents/Report development/programming/: imports.tex
Practices/18-01-2025/: regexx.ipynb
Practices/18-01-2025/project/: compiler.py  example.py  lexical.py
(+5 files in other folders)
